<resources>
    <string name="app_name">Hello Toast</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_poke">Poke</string>
    <string name="count_initial_value">0</string>
    <string name="button_label_count">Count</string>
    <string name="toast_message">Hello World!</string>
    <string name="button_label_reset">Reset</string>
    <string name="poke_message">Kena Poke dech!</string>
</resources>
